--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.5",
+    "@apollo/client": "^3.8.1",
+    "@phosphor-icons/react": "^2.0.10",
+    "antd": "^5.8.3",
+    "axios": "^1.4.0",
+    "currency.js": "^2.0.4",
+    "dayjs": "^1.11.9",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
